Change project name for publishing to npm

--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-    "name": "adm-zip",
+    "name": "adm-zip-electron",
     "version": "0.4.7",
-    "description": "A Javascript implementation of zip for nodejs. Allows user to create or extract zip files both in memory or to/from disk",
+    "description": "Fork of a Javascript implementation of zip for nodejs with support for electron original-fs. Allows user to create or extract zip files both in memory or to/from disk",
     "keywords": [
         "zip",
         "methods",
         "archive",
         "unzip"
     ],
-    "homepage": "http://github.com/cthackers/adm-zip",
+    "homepage": "https://github.com/kadledav/adm-zip",
     "author": "Nasca Iacob <sy@another-d-mention.ro> (https://github.com/cthackers)",
     "bugs": {
         "email": "sy@another-d-mention.ro",
