--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "adm-zip-electron",
+    "name": "adm-zip",
     "version": "0.4.7",
     "description": "Javascript implementation of zip for nodejs with support for electron original-fs. Allows user to create or extract zip files both in memory or to/from disk",
     "keywords": [
