--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ sudo: false
 language: node_js
 
 node_js:
+  - 8
   - 6
-  - 4
 
 cache:
   directories:
@@ -13,3 +13,6 @@ cache:
 install:
   - npm i -g npm@latest
   - npm install
+
+test:
+  -
