--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "adm-zip",
   "version": "0.4.12",
   "description": "Javascript implementation of zip for nodejs with support for electron original-fs. Allows user to create or extract zip files both in memory or to/from disk",
+  "scripts": {
+    "test": "mocha test/mocha.js"
+  },
   "keywords": [
     "zip",
     "methods",
