--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "methods",
     "util",
     "zipEntry.js",
-    "zipFile.js"
+    "zipFile.js",
+    "MIT-LICENSE.txt"
   ],
   "main": "adm-zip.js",
   "repository": {
