--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.4.16",
   "description": "Javascript implementation of zip for nodejs with support for electron original-fs. Allows user to create or extract zip files both in memory or to/from disk",
   "scripts": {
-    "test": "mocha test/mocha.js test/crc/index.js"
+    "test": "mocha test/mocha.js test/crc/index.js test/multibyte/test.js"
   },
   "keywords": [
     "zip",
