--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "util",
     "zipEntry.js",
     "zipFile.js",
-    "MIT-LICENSE.txt"
+    "LICENSE"
   ],
   "main": "adm-zip.js",
   "repository": {
