--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.5.5",
     "description": "Javascript implementation of zip for nodejs with support for electron original-fs. Allows user to create or extract zip files both in memory or to/from disk",
     "scripts": {
-        "test": "mocha -r ts-node/register -R spec",
+        "test": "cross-env TS_NODE_COMPILER_OPTIONS='{ \"module\": \"commonjs\" }' mocha -r ts-node/register test/**/*.ts -R spec",
         "test:format": "npm run format:prettier:raw -- --check",
         "format": "npm run format:prettier",
         "format:prettier": "npm run format:prettier:raw -- --write",
@@ -50,6 +50,7 @@
         "ts-node": "^9.1.1"
     },
     "dependencies": {
+        "cross-env": "^7.0.3",
         "typescript": "^4.2.4"
     }
 }
