--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "chai": "^4.3.4",
     "mocha": "^8.3.2",
     "prettier": "^2.2.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
