--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "iconv-lite": "^0.6.3",
     "mocha": "^10.2.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2"
