--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,8 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [10.x, 12.x, 14.x, 16.x, 18.x, 20.x, 21.x]
+        # mocha nolonger supports node 10
+        node-version: [12.x, 14.x, 16.x, 18.x, 20.x, 21.x]
 
     steps:
       - uses: actions/checkout@v4
