--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,4 +1,4 @@
-name: Linux build
+name: Windows build
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
 jobs:
   build:
     name: Node ${{ matrix.node-version }}
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     strategy:
       matrix:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Install
         run: |
-          npm install
+          npm ci
 
       - name: Run Tests
         run: |
