--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       matrix:
         # mocha nolonger supports node 10
-        node-version: [12.x, 14.x, 16.x, 18.x, 20.x, 21.x]
+        node-version: [18.x, 20.x, 22.x]
 
     steps:
       - name: Clone repository
